# ss_blink_baremetal_test

./: .cproject  .gitignore  .project  .projectlinkstore  blink_baremetal_test.pintool  blink_baremetal_test.slcp  blink_baremetal_test.slps  vscode.conf
.pdm/: uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .blink_baremetal_test.pwmCLK_100_Hz.cedit  .blink_baremetal_test.pwmPWM_out_1.cedit
autogen/: .crc_config.crc  sl_component_catalog.h  sl_pwm_init.c  sl_pwm_instances.h
blink_baremetal_test_cmake/: CMakeLists.txt  CMakePresets.json  blink_baremetal_test.cmake
config/: pin_config.h  sl_pwm_init_CLK_100_Hz_config.h
src/: app.c
